# libvarbit

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
benchmark/: benchmark.h  benchmark_helper.h  count.cc  fast_rand.h  push_back.cc  random.cc  sequential.cc  sum.cc  timer.h
benchmarks/: sum.cpp
include/: bitvector.h  vector.h
src/: bitvector.cpp
test/: base_iterator.cc  bitvector.cc  const_iterator.cc  iterator.cc  main.cc  reference.cc  varbit_test.h  vector.cc
varbit/: base_iterator.h  const_iterator.h  iterator.h  newvector.h  reference.h  types.h  vector.h
